RESOLVED FIXED86663
REGRESSION(r92823): WebKit strips font-weight: normal from b element when copying
https://bugs.webkit.org/show_bug.cgi?id=86663
Summary REGRESSION(r92823): WebKit strips font-weight: normal from b element when cop...
Ryosuke Niwa
Reported 2012-05-16 11:59:29 PDT
Reproduction steps: 1. Open the following HTML: <b style="font-weight: normal;">Copy all and paste</b> 2. Select all & copy 3. Paste in some richly content editable area. Expected result: "Copy all and paste" isn't bolded in the pasted context Actual result" "Copy all and paste" is bolded.
Attachments
Fixes the bug (3.67 KB, patch)
2012-05-16 15:27 PDT, Ryosuke Niwa
no flags
Ryosuke Niwa
Comment 1 2012-05-16 13:40:55 PDT
Ryosuke Niwa
Comment 2 2012-05-16 15:11:33 PDT
This is a very old regression from r92823.
Ryosuke Niwa
Comment 3 2012-05-16 15:27:58 PDT
Created attachment 142352 [details] Fixes the bug Very simple fix.
WebKit Review Bot
Comment 4 2012-05-16 16:29:37 PDT
Comment on attachment 142352 [details] Fixes the bug Clearing flags on attachment: 142352 Committed r117361: <http://trac.webkit.org/changeset/117361>
WebKit Review Bot
Comment 5 2012-05-16 16:29:41 PDT
All reviewed patches have been landed. Closing bug.
Alexey Proskuryakov
Comment 6 2012-05-17 11:53:44 PDT
Note You need to log in before you can comment on or make changes to this bug.