REGRESSION(r92823): WebKit strips font-weight: normal from b element when copying https://bugs.webkit.org/show_bug.cgi?id=86663

Reviewed by Tony Chang.

The bug was caused by removeStyleFromRulesAndContext incorrectly stripping font-weight property
even when the context had no font-weight property because of a property name mismatch in getPropertiesNotIn.

Fixed the mismatch.

Test: editing/pasteboard/paste-text-with-style-5.html

* editing/EditingStyle.cpp:
(WebCore::getPropertiesNotIn):


Canonical link: https://commits.webkit.org/104273@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@117361 268f45cc-cd09-0410-ab3c-d52691b4dbfc